# iasc46307

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: xor.keras
src/lib/: ativacao.py  camada.py  rede_neuronal.py  rede_neuronal_keras.py
src/lib/apr/: agente.py  estrategia.py  mecanismo.py  memoria.py  metodo.py  qme.py  util.py
src/lib/plan/: agente.py  frente_onda.py  modelo.py  modelo2d.py  planeador.py  problema2d.py  visualizador.py
src/lib/rna/: ativacao.py  camada.py  rede_neuronal.py  rede_neuronal_keras.py
src/mod/ambiente/: accao.py  ambiente.py  defamb.py  elemento.py
src/tests/parte1_1/: test_xor.py
src/tests/parte1_2/: test_and.py  test_not.py  test_or.py  test_xor.py
src/tests/parte1_3/: efeito_1_taxa_aprend.py  efeito_2_momento.py  efeito_3_aleatoria.py  efeito_params.py  test_xor.py  test_xor_manual.py
src/tests/parte1_4/: test_padroes.py
src/tests/parte2/: test_amb.py  test_apr.py
src/tests/parte3/: test_delib.py
