[project]
name = "iasc46307"
version = "1.2"
description = "Projeto Incremental | Inteligência Artificial e Sistemas Cognitivos | Semestre de Inverno 2023/2024"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {name = "Diogo Ribeiro", email = "46307@alunos.isel.ipl.pt"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Artificial Intelligence :: Cognitive Systems",
  "Natural Language :: Portuguese",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "tensorflow",
    "matplotlib"
]

[project.urls]
repository = "https://github.com/dfrribeiro/iasc46307"